--- a/stylesheet.css
+++ b/stylesheet.css
@@ -83,70 +83,49 @@ img {
     animation: fadeOut 0.3s ease;
 }
 /* Blur */
-.modal, nav {
-    background: rgba(231, 231, 231, 0.9);
+.modal, nav{
+    background: rgba(42, 42, 42, 0.9);
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
 }
 /* Dark Gradient */
-.modal .close-button, .nav a, .contact-form input[type="submit"], .welcometext, .pagewelcome, .featuredarticle, .articlecolumn {
+.modal .close-button, .contact-form input[type="submit"], .welcometext, .featuredarticle, .articlecolumn {
     background: linear-gradient(#333333, #111111);
 }
 /* Light Gradient */
-.sitemap, footer a, .articlecolumn a, .articles, .contact-form {
+.sitemap, .articlecolumn a, .articles, .contact-form {
     background: linear-gradient(#f7f7f7, #dbdbdb);
     color: #000000;
 }
 /* Hover large dropshadow */
-.modal .close-button:hover, img:not(.enlarged-image):hover {
+img:not(.enlarged-image):hover {
     box-shadow: 0 8px 20px 0 #007BFF;
     cursor: pointer;
 }
 /* Rounded corners */
-div, aside a, .sitemap a, .linkbutton, footer a, button, .articlecolumn a, .contact-form input[type="submit"] {
+div, aside a, .sitemap a, .linkbutton, button, .articlecolumn a, .contact-form input[type="submit"] {
     border-radius: 10px;
 }
 /*Not Rounded*/
 .articles, .nav, .modal {
     border-radius: 0;
 }
-.welcometext, .pagewelcome{
-    margin: auto;
-    color: #ffffff;
-    border: #222222;
-    border-style: solid;
-}
 /* Header */
-.logo {
-    height: 100%;
-    max-width: 22%;
-    box-shadow: 0 4px 30px 0 #000000;
-}
-.logo img {
-    background:#000000;
-    border-radius: 0;
-}
-.headertext {
-    margin: auto;
+header{
     font-size: 170%;
     text-align: center;
     color: #007BFF;
     font-family: 'Anton', sans-serif;
     font-style: normal;
-    text-decoration: underline;
     letter-spacing: 2px;
     src: local('Anton'),url(https://fonts.gstatic.com/s/anton/v25/1Ptgg87LROyAm3Kz-C8.woff2) format('woff2');
-    text-shadow: 1px 0 10px #000000;
-}
-header {
-    background: linear-gradient(#000000, #333333);
+    text-shadow: 0px 20px 40px #000000;
+    background:linear-gradient(#000000, #0043ae);
     height: 100px;
-    width: 100%;
-    margin-top: 0px;
     display: flex;
 }
 /* Sets the appearance of title text to match h1 */
-.headertext p {
+header p {
     font-size: 2em; 
     font-weight: bold; 
     padding: 0; 
@@ -158,38 +137,47 @@ nav {
     position: sticky;
     top: 0;
     z-index: 1;
-    padding: 4px 8px 4px 8px;
     overflow: auto;
+    width: 75%;
+    margin: auto;
+    font-size: 0;
 }
 .nav a {
-    padding: 6px 8px;
+    padding: 10px 0;
     text-decoration: none;
-    margin: 0 0 0 8px;
-    align-items: center;
+    text-align: center;
     display:inline-block;
-    border-radius: 10px;
+    width: 20%;
 }
-.nav button {
-    width: 96%;
-    font-size: 100%;
+.nav a, .nav button, footer a {
+    color: #000000;
+    background: linear-gradient(#ffffff, #dadada, #d6d6d6);
+    font-size: 16px;
 }
-li.nav {
-    display: inline;
-    padding: 0;
+.nav a:hover, .nav button:hover, footer a:hover {
+    color: #ffffff;
+    background: linear-gradient(#007BFF, #006ee4, #0024c4);
+    text-decoration: underline;
+    font-size: 16px;
+    box-shadow: none;
 }
-.columnnav {
-    float: left;
-    width: 75%;
+
+.nav a.active {
+    background: #006ee4;
+    color: #ffffff;
+    font-weight: bold;
 }
-.columnclose {
-    float: right;
-    width: 25%;
-}
-.nav {
-    top: 0;
+.nav button, .nav button:hover {
+    width: 100%;
+    padding: 14.5px 0;
+    border-radius: 0;
+    border: 0;
 }
 .nav .icon {
     display: none;
+}
+button:hover {
+    cursor: pointer;
 }
 /* Responsive Nav */
 @media screen and (max-width: 1000px) {
@@ -197,19 +185,16 @@ li.nav {
         display: none;
     }
     .nav a {
-        padding: 16px;
-        margin: 0;
+        padding: 16px 0;
+        width: 100%;
     }
     .nav.responsive a, .nav.responsive button {
-        float: none;
         display: block;
         text-align: left;
-        border-radius: 0;
+        text-indent: 2%;
     }
-    .nav a.icon, .nav button.icon {
+    .nav button.icon {
         display: block;
-        padding: 16px 0;
-        margin: 0 0 0 8px;
         text-align: center;
     }
     nav.responsive {
@@ -221,10 +206,21 @@ li.nav {
         left: 0;
         z-index: 3;
     }
+    .columnnav {
+        float: left;
+        width: 70%;
+    }
+    .columnclose {
+        float: right;
+        width: 25%;
+    }
 }
 @media screen and (max-width: 1200px) {
     .nav a {
-        padding: 16px;
+        padding: 16px 0;
+    }
+    nav {
+        width: 100%;
     }
 }
 /*Welcome page, display 3 articles and a page welcome*/ 
@@ -233,6 +229,10 @@ li.nav {
     padding: 1%;
     margin: auto;
     text-align: center;
+    margin: auto;
+    color: #ffffff;
+    border: #222222;
+    border-style: solid;
 }
 .welcometext p, .welcometext h1 {
     margin: 2%;
@@ -248,28 +248,18 @@ li.nav {
     padding: 5px;
     margin: 5px;
 }
-/*Dark buttons*/
- .sitemap a, .linkbutton, .contact-form input[type="submit"], .nav a, button, .modal .close-button{
-    color: #000000;
-    border: solid #00a4f0;
-    background: linear-gradient(#ffffff, #dadada, #d6d6d6);
+/*Blue buttons*/
+ .sitemap a, .linkbutton, .contact-form input[type="submit"], .modal .close-button, aside a, .articlecolumn a{
+    color: #ffffff;
+    border: solid 4px #007BFF;
+    background: linear-gradient(#007BFF, #006ee4, #0024c4);
 }
 /*Button hover animation*/
-.articlecolumn a:hover, button:hover, .linkbutton:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover{
-    color: #ffffff;
-    background: linear-gradient(#5cbeff, #00a4f0, #006ed4);
-    border: solid #007BFF;
+.articlecolumn a:hover, button:hover, .linkbutton:hover, .contact-form input[type="submit"]:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover, .articlecolumn a:hover{
+    color: #000000;
+    background: linear-gradient(#ffffff, #dadada, #d6d6d6);
+    border: solid 4px #007BFF;
     text-decoration: underline;
-    box-shadow: 0 4px 10px 0 #007BFF;
-}
-.nav a.active {
-    background: #000000;
-    color: #ffffff;
-    font-weight: bold;
-}
-/*Light buttons*/
-footer a, .articlecolumn a{
-    border: solid #00a4f0;
 }
 /*Card appearance*/
 .featuredarticle, .articlecolumn{
@@ -278,14 +268,6 @@ footer a, .articlecolumn a{
     box-sizing: border-box; 
 }
 /*Article showcase pages*/
-.pagewelcome {
-    max-width: 75ch;
-    padding: 1%;
-}
-.pagewelcome h1 {
-    margin-top: 0;
-    font-size: 200%;
-}
 .articles {
     overflow: hidden;
     padding: 1%;
@@ -364,9 +346,6 @@ aside a {
     padding: 5px 4px 5px 9px;
     margin: 3px 0 3px 1%;
     display:inline-block;
-    background: linear-gradient(#333333, #000000);
-    color: #ffffff;
-    border: solid #222222;
 }
 aside h2 {
     margin: 3%;
@@ -403,32 +382,11 @@ aside h2 {
         margin: auto;
     }
 }
-/*Contact*/
-.contact {
-    width: 80%;
-    max-width: 2000px;
-    background-color: #222222;
-    color: #ffffff;
-    margin: 1% auto;
-    padding-bottom: 5px;
-}
-.contact p {
-    margin: 2%;
-    padding-left: 2%;
-    max-width: 75ch;
-}
- .contact h1 {
-    margin: 2%;
-    font-size: 200%;
-    padding: 2%;
-}
 /* Contact Form */
 .contact-form {
-    margin: 1%;
+    margin: auto;
     padding: 20px;
     padding-bottom: 10px;
-}
-.contact-form label {
     font-weight: bold;
 }
 .contact-form input[type="text"],
@@ -440,8 +398,7 @@ aside h2 {
     border: 2px solid #007BFF;
     border-radius: 10px;
     font-family: sans-serif;
-    background-color: #000000;
-    box-shadow: 0 4px 10px 0 #007BFF;
+    background-color: #007BFF;
     color: #ffffff;
 }
 .contact-form textarea {
@@ -482,7 +439,7 @@ footer p {
 footer a {
     margin: auto;
     width: 40%;
-    padding: 14px 0;
+    padding: 19px 0;
     border-radius: 0;
     display:inline-block;
 }
@@ -519,9 +476,9 @@ th {
     .asidefooter {
         padding-left: 29%;
     }
-    .contact{
-        width: 60%;
-    }
+.contact-form {
+    width: 75%;
+}
 }
 /* Responsive design Mobile */
 @media screen and (max-width: 600px) {
@@ -534,19 +491,19 @@ th {
         word-wrap: break-word;
     }
     /* Makes header text fill screen, stops overflow into nav bar on small screens.*/
-    .headertext {
+    header{
         width: 100%;
-        font-size: 100%;
+        font-size: 110%;
         text-shadow: none;
         overflow: hidden;
     }
     /* Makes welcome text fill screen*/
-    .welcometext, .pagewelcome{
+    .welcometext{
         width: auto;
         margin: 0 1%;
     }
     /* Makes contact and table fill screen*/
-    .contact, table{
+    table{
         width: 98%;
         margin: 0 1%;
     }
@@ -593,32 +550,25 @@ th {
         background:  linear-gradient(#0f0f0f, #272727);
         color: #ffffff;
     }
-    /*Buttons to grey*/
-    .modal .close-button, aside a, .sitemap a, .linkbutton, footer a, .articlecolumn a, .contact-form input[type="submit"], .nav a {
-        color: #ffffff;
-        background: linear-gradient(#616161, #272727);
-        border: solid #00a4f0;
-    }
-    /*Contact dark grey*/
-    .contact-form {
-        background: linear-gradient(#616161, #272727);
-        color: #ffffff;
-    }
-    /*Button hover animation*/
-    .linkbutton:hover, button:hover, .nav a:hover, .contact-form input[type="submit"]:hover, footer a:hover, .sitemap a:hover, aside a:hover, .articlecolumn a:hover{
-        background: linear-gradient(#333333, #111111);
-    }
-    model butt
     th, td {
         border-bottom: 2px solid #ffffff;
     }
     table {
         border: 2px solid #ffffff;
     }
-    nav, .modal {
-        background: rgba(65, 65, 65, 0.90);
-    }
     .linkblack {
+        color: #ffffff;
+    }
+    .nav a, .nav button, footer a {
+        color: #ffffff;
+        background: linear-gradient(#5b5b5b, #3e3e3e, #1f1f1f);
+    }
+    .articlecolumn a:hover, button:hover, .linkbutton:hover, .contact-form input[type="submit"]:hover, .sitemap a:hover, aside a:hover, .modal .close-button:hover, .articlecolumn a:hover{
+        color: #ffffff;
+        background: linear-gradient(#5b5b5b, #3e3e3e, #1f1f1f);
+    }
+    .contact-form {
+        background: linear-gradient(#1f1f1f, #3e3e3e, #313131);
         color: #ffffff;
     }
 }
